fix regression bug #50394: Reference argument converted to value in __call